syntax = "proto3";

package exa.product_analytics_pb;

option go_package = "github.com/Exafunction/Exafunction/exa/product_analytics_pb";

import "buf/validate/validate.proto";

service ProductAnalyticsService {
  rpc RecordAnalyticsEvent (.exa.product_analytics_pb.RecordAnalyticsEventRequest) returns (.exa.product_analytics_pb.RecordAnalyticsEventResponse) {}
  rpc BatchRecordAnalyticsEvents (.exa.product_analytics_pb.BatchRecordAnalyticsEventsRequest) returns (.exa.product_analytics_pb.BatchRecordAnalyticsEventsResponse) {}
}

message RecordAnalyticsEventRequest {
  message ExtraEntry {
    string key = 1;
    string value = 2;
  }

  message ExperimentsEntry {
    string key = 1;
    bool value = 2;
  }

  string event_name = 1;
  string api_key = 2;
  string installation_id = 3;
  string ide_name = 4;
  string os = 5;
  string codeium_version = 6;
  string ide_version = 7;
  uint64 duration_ms = 8;
  repeated .exa.product_analytics_pb.RecordAnalyticsEventRequest.ExtraEntry extra = 9;
  repeated .exa.product_analytics_pb.RecordAnalyticsEventRequest.ExperimentsEntry experiments = 10;
  string plan_tier = 11;
  string device_fingerprint = 12;
  string ide_type = 13;
}

message RecordAnalyticsEventResponse {
}

message BatchRecordAnalyticsEventsRequest {
  repeated .exa.product_analytics_pb.RecordAnalyticsEventRequest events = 1;
  string api_key = 2;
}

message BatchRecordAnalyticsEventsResponse {
}

